nginx/nginx_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxingress
spec:
  rules:
  - host: karis.axesor.es
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxservice
          servicePort: 80
