nginx/nginx_ingress_helm.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-ingress
  name: nginx-ingress
  namespace: default
spec:
  rules:
    - host: karis.axesor.es
      http:
        paths:
          - backend:
              serviceName: nginxservice
              servicePort: 80
            path: /
